build_output.txt

> Task :compileJava
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:6: error: cannot find symbol
import com.carselling.oldcar.service.CarPriceService;
                                    ^
  symbol:   class CarPriceService
  location: package com.carselling.oldcar.service
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:28: error: cannot find symbol
    private final CarPriceService carPriceService;
                  ^
  symbol:   class CarPriceService
  location: class CarPriceController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:23: error: cannot find symbol
@RequiredArgsConstructor
^
  symbol:   class CarPriceService
  location: class CarPriceController
3 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///D:/Startup/Car%20Frontend%20Backend/Sell-the-old-Car/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:6: error: cannot find symbol
  import com.carselling.oldcar.service.CarPriceService;
                                      ^
    symbol:   class CarPriceService
    location: package com.carselling.oldcar.service
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:28: error: cannot find symbol
      private final CarPriceService carPriceService;
                    ^
    symbol:   class CarPriceService
    location: class CarPriceController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarPriceController.java:23: error: cannot find symbol
  @RequiredArgsConstructor
  ^
    symbol:   class CarPriceService
    location: class CarPriceController
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
1 actionable task: 1 executed
